# research-master-mcp

./: .1mcprc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.ocr  LICENSE  README.md  audit.toml  cargo-dist.toml  justfile  lefthook.toml  research-master.example.toml
.cargo/: config.toml
.github/workflows/: auto-close-conflicted-prs.yml  ci.yml  release.yml  update-homebrew.yml
.husky/: pre-commit
Formula/: research-master-mcp.rb
docs/: configuration.md  development.md  installation.md  mcp-clients.md  sources.md  tools.md  usage.md
examples/: basic_usage.rs
src/: lib.rs  main.rs
src/config/: file_config.rs  mod.rs
src/mcp/: mod.rs  server.rs  tools.rs  unified_tools.rs
src/models/: mod.rs  paper.rs  search.rs
src/sources/: acm.rs  arxiv.rs  base.rs  biorxiv.rs  connected_papers.rs  core.rs  crossref.rs  dblp.rs  dimensions.rs  doaj.rs  europe_pmc.rs  google_scholar.rs  hal.rs  iacr.rs  ieee_xplore.rs  jstor.rs  mdpi.rs  mock.rs  mod.rs  openalex.rs  osf.rs  pmc.rs  pubmed.rs  registry.rs  scispace.rs  semantic.rs  springer.rs  ssrn.rs  unpaywall.rs  worldwidescience.rs  zenodo.rs
src/ui/: mod.rs
src/utils/: cache.rs  circuit_breaker.rs  cite.rs  dedup.rs  display.rs  history.rs  http.rs  mod.rs  pdf.rs  progress.rs  retry.rs  streaming.rs  update.rs  validate.rs
tests/: integration_tests.rs
