[package]
name = "research-master-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for searching and downloading academic papers from multiple research sources"
authors = ["hongkongkiwi"]
license = "MIT"
repository = "https://github.com/hongkongkiwi/research-master-mcp"

[dependencies]
# MCP Protocol (using pmcp crate)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pmcp = { version = "1.9", features = ["streamable-http"] }

# Async runtime
tokio = { version = "1.40", features = ["full", "signal"] }
async-trait = "0.1"
bitflags = "2.6"

# HTTP client
reqwest = { version = "0.12", features = ["json", "socks"] }
http = "1.1"

# XML parsing
quick-xml = { version = "0.37", features = ["serialize"] }

# Atom/RSS feed parsing
feed-rs = "2.1"

# HTML parsing
scraper = "0.21"

# URL handling
url = "2.5"
urlencoding = "2.1"

# Regex for text processing
regex = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.15"

# Text similarity for deduplication
strsim = "0.11"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Terminal output formatting
atty = "0.2"
comfy-table = "7.1"

# PDF extraction (optional, for future use)
pdf-extract = "0.7"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

[features]
# Individual source features (all enabled by default)
arxiv = ["source-arxiv"]
pubmed = ["source-pubmed"]
biorxiv = ["source-biorxiv"]
semantic = ["source-semantic"]
openalex = ["source-openalex"]
crossref = ["source-crossref"]
iacr = ["source-iacr"]
pmc = ["source-pmc"]
hal = ["source-hal"]
dblp = ["source-dblp"]
ssrn = ["source-ssrn"]
dimensions = ["source-dimensions"]
ieee_xplore = ["source-ieee_xplore"]
core_repo = ["source-core-repo"]
zenodo = ["source-zenodo"]
unpaywall = ["source-unpaywall"]
mdpi = ["source-mdpi"]

# Internal feature names (to avoid conflicts with source IDs)
source-arxiv = []
source-pubmed = []
source-biorxiv = []
source-semantic = []
source-openalex = []
source-crossref = []
source-iacr = []
source-pmc = []
source-hal = []
source-dblp = []
source-ssrn = []
source-dimensions = []
source-ieee_xplore = []
source-core-repo = []
source-zenodo = []
source-unpaywall = []
source-mdpi = []

# Default feature: all sources enabled
default = [
    "source-arxiv",
    "source-pubmed",
    "source-biorxiv",
    "source-semantic",
    "source-openalex",
    "source-crossref",
    "source-iacr",
    "source-pmc",
    "source-hal",
    "source-dblp",
    "source-ssrn",
    "source-dimensions",
    "source-ieee_xplore",
    "source-core-repo",
    "source-zenodo",
    "source-unpaywall",
    "source-mdpi",
]

# Convenience feature groups
core = ["source-arxiv", "source-pubmed", "source-semantic"]
preprints = ["source-arxiv", "source-biorxiv"]
full = ["default"]

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.5"

[[bin]]
name = "research-master-mcp"
path = "src/main.rs"

[lib]
name = "research_master_mcp"
path = "src/lib.rs"
