[package]
name = "research-master-mcp"
version = "0.1.18"
edition = "2021"
description = "MCP server for searching and downloading academic papers from multiple research sources"
authors = ["hongkongkiwi"]
license = "MIT"
repository = "https://github.com/hongkongkiwi/research-master-mcp"
categories = ["science", "api-bindings", "command-line-utilities"]
keywords = ["mcp", "academic", "research", "papers", "scholar"]
readme = "README.md"
homepage = "https://github.com/hongkongkiwi/research-master-mcp"
documentation = "https://docs.rs/research-master-mcp"

# Publish to crates.io
publish = ["crates-io"]

# Binary configuration
[[bin]]
name = "research-master-mcp"
path = "src/main.rs"

[dependencies]
# MCP Protocol (using pmcp crate)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pmcp = { version = "1.9", features = ["streamable-http"] }

# Async runtime
tokio = { version = "1.40", features = ["full", "signal"] }
async-trait = "0.1"
bitflags = "2.6"

# HTTP client
reqwest = { version = "0.12", features = ["json", "socks"] }
http = "1.1"

# OpenSSL for static builds (musl/Alpine)
openssl = { version = "0.10", features = ["vendored"] }

# XML parsing
quick-xml = { version = "0.37", features = ["serialize"] }

# Atom/RSS feed parsing
feed-rs = "2.1"

# HTML parsing
scraper = "0.21"

# URL handling
url = "2.5"
urlencoding = "2.1"

# Regex for text processing
regex = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.15"

# Text similarity for deduplication
strsim = "0.11"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Terminal output formatting
is-terminal = "0.4"
comfy-table = "7.1"

# PDF extraction (poppler for best results, lopdf as fallback)
pdf-extract = "0.7"
lopdf = "0.34"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Caching
md5 = "0.7"
tempfile = "3.12"

# Version handling for self-updates
semver = "1.0"

# SHA256 for checksum verification
sha2 = "0.10"

# ZIP extraction for Windows self-updates
zip = "2"

[features]
# Individual source features (all enabled by default)
arxiv = ["source-arxiv"]
pubmed = ["source-pubmed"]
biorxiv = ["source-biorxiv"]
semantic = ["source-semantic"]
openalex = ["source-openalex"]
crossref = ["source-crossref"]
iacr = ["source-iacr"]
pmc = ["source-pmc"]
hal = ["source-hal"]
dblp = ["source-dblp"]
ssrn = ["source-ssrn"]
dimensions = ["source-dimensions"]
ieee_xplore = ["source-ieee_xplore"]
europe_pmc = ["source-europe_pmc"]
core_repo = ["source-core-repo"]
zenodo = ["source-zenodo"]
unpaywall = ["source-unpaywall"]
mdpi = ["source-mdpi"]
jstor = ["source-jstor"]
scispace = ["source-scispace"]
acm = ["source-acm"]
connected_papers = ["source-connected_papers"]
doaj = ["source-doaj"]
worldwidescience = ["source-worldwidescience"]
osf = ["source-osf"]
base = ["source-base"]
springer = ["source-springer"]
google_scholar = ["source-google_scholar"]

# Internal feature names (to avoid conflicts with source IDs)
source-arxiv = []
source-pubmed = []
source-biorxiv = []
source-semantic = []
source-openalex = []
source-crossref = []
source-iacr = []
source-pmc = []
source-hal = []
source-dblp = []
source-ssrn = []
source-dimensions = []
source-ieee_xplore = []
source-europe_pmc = []
source-core-repo = []
source-zenodo = []
source-unpaywall = []
source-mdpi = []
source-jstor = []
source-scispace = []
source-acm = []
source-connected_papers = []
source-doaj = []
source-worldwidescience = []
source-osf = []
source-base = []
source-springer = []
source-google_scholar = []

# Default feature: all sources enabled (except google_scholar which requires env var)
default = [
  "source-arxiv",
  "source-pubmed",
  "source-biorxiv",
  "source-semantic",
  "source-openalex",
  "source-crossref",
  "source-iacr",
  "source-pmc",
  "source-hal",
  "source-dblp",
  "source-ssrn",
  "source-dimensions",
  "source-ieee_xplore",
  "source-core-repo",
  "source-zenodo",
  "source-unpaywall",
  "source-mdpi",
  "source-jstor",
  "source-scispace",
  "source-acm",
  "source-connected_papers",
  "source-doaj",
  "source-worldwidescience",
  "source-osf",
  "source-base",
  "source-springer",
  # google_scholar is NOT included by default - requires GOOGLE_SCHOLAR_ENABLED=true
]

# Convenience feature groups
core = ["source-arxiv", "source-pubmed", "source-semantic"]
preprints = ["source-arxiv", "source-biorxiv"]
full = ["default"]

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.5"
cargo-dist = "0.22"
cargo-husky = "1"

# Configure cargo-husky to run lint, TOML validation, and security audit before push
[workspace.metadata.husky]
pre-push = ["cargo clippy", "taplo fmt --check", "cargo audit"]

# RPM package configuration
[package.metadata.rpm]
package = "research-master-mcp"

[package.metadata.rpm.targets.x86_64-unknown-linux-gnu]
path = "target/x86_64-unknown-linux-gnu/release/research-master-mcp"
assets = [
  { path = "target/x86_64-unknown-linux-gnu/release/research-master-mcp", dest = "usr/bin/research-master-mcp" },
]

[package.metadata.rpm.targets.aarch64-unknown-linux-gnu]
path = "target/aarch64-unknown-linux-gnu/release/research-master-mcp"
assets = [
  { path = "target/aarch64-unknown-linux-gnu/release/research-master-mcp", dest = "usr/bin/research-master-mcp" },
]

# The library is also available for use as a library
[lib]
name = "research_master_mcp"
path = "src/lib.rs"

# Examples
[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
